<resources>
    <string name="app_name">Cat Facts</string>
    <string name="main_button_add_contact">Add</string>
    <string name="main_button_find_contact">Contacts</string>
    <string name="Name">Name:</string>
    <string name="Phone">Number:</string>
    <string name="contact_button_remove">Remove</string>
    <string name="contact_button_welcome">Welcome</string>
    <string name="contact_button_catfact">Cat Fact</string>
    <string name="contact_button_unsubscribe">Unsubscribe</string>
    <string name="contact_checkbox_viewMMS">View message before sending</string>
    <string name="contact_button_not_recognized">Command Not Recognized</string>
</resources>