<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/contact_linearlayout" >

    <TextView
        android:id="@+id/contact_textView_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/contact_textView_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >

        <Button
            android:id="@+id/contact_button_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_button_remove" />

        <Button
            android:id="@+id/contact_button_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_button_welcome" />

        <Button
            android:id="@+id/contact_button_catfact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_button_catfact" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        
        <Button
            android:id="@+id/contact_button_unsubscribe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_button_unsubscribe" />
        
        <Button
            android:id="@+id/contact_button_not_recognized"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_button_not_recognized" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/contact_checkBox_viewmms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/contact_checkbox_viewMMS" />

    <!-- CheckBox
        android:id="@+id/contact_auto_respond_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Contract_Auto_Response_Checkbox" /-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/contact_textview_explaination" />

</LinearLayout>